Fix responsiveness issue on mobile due to introduction section.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -346,13 +346,13 @@ menu {
 
 #introduction {
   position: absolute;
-  margin-left: -10em;
+  margin-left: -5em;
   text-align: center;
   margin-top: -3em;
   line-height: 2em;
   font-size: 2em;
   height: 6em;
-  width: 20em;
+  width: 10em;
   left: 50%;
   top: 50%;
 }
